# custom-mpl

./: CMakeLists.txt  Makefile  README.md
cmake/: custom_mplConfig.cmake.in
examples/: CMakeLists.txt  main_adjlist_demo.cpp  main_large_graph_demo.cpp  main_user_custom_graph.cpp
include/custom_mpl/: custom_mpl.hpp
include/custom_mpl/search/: search.hpp
include/custom_mpl/search/algorithms/: algorithms.hpp  astar.hpp  astar_dense_ids.hpp  dijkstra.hpp  focal_search.hpp
include/custom_mpl/search/algorithms/detail/: astar.tpp  astar_dense_ids.tpp  focal_search.tpp
include/custom_mpl/search/core/: core.hpp  heuristic.hpp  heuristic_lift.hpp  node_store.hpp  problem.hpp  result.hpp  solve.hpp  types.hpp
include/custom_mpl/search/datastructures/: datastructures.hpp  heap.hpp  intrusive_heap.hpp  open_list.hpp  pq_binary_heap.hpp  pq_maker.hpp  priority_queue.hpp
include/custom_mpl/search/graphs/: adjacency_list_graph.hpp  auto_intern.hpp  graph.hpp  graphs.hpp  int_adj.hpp
include/custom_mpl/search/policies/: closed_set.hpp  ordering.hpp  policies.hpp  reopen.hpp  tie_break.hpp
include/custom_mpl/search/utils/: hash_utils.hpp  indexer.hpp  reconstruct.hpp  stats.hpp  utils.hpp
include/search/algorithms/: astar.hpp  astar_dense_ids.hpp  dijkstra.hpp
include/search/algorithms/detail/: astar.tpp
include/search/core/: heuristic.hpp  heuristic_lift.hpp  problem.hpp  result.hpp  solve.hpp  types.hpp
include/search/datastructures/: pq_binary_heap.hpp
include/search/graphs/: adjacency_list_graph.hpp  auto_intern.hpp  graph.hpp  int_adj.hpp
include/search/utils/: indexer.hpp  reconstruct.hpp  stats.hpp
src/apps/: main_adjlist_demo.cpp  main_user_custom_graph.cpp
src/search/utils/: stats.cpp
tests/: CMakeLists.txt  test_astar_admissible.cpp  test_dijkstra_basic.cpp  test_edge_cases.cpp  test_priority_queues.cpp  test_solve_astar_easy.cpp
